# .qqgjyx

./: README.md  demo.ipynb  deploy.py  pyproject.toml
src/qqgjyx/: __init__.py  exceptor.py  helper.py  qq.py  utils.py  validator.py
src/qqgjyx/data/: __init__.py  split.py
src/qqgjyx/graph/: __init__.py
src/qqgjyx/model/: __init__.py
src/qqgjyx/visual/: __init__.py  plotting.py
test/: test_basic.py  test_comprehensive.py  test_version.py
