[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqgjyx"
version = "0.1.5"
description = "Personal utility toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jun-Tang Wang" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/qqgjyx/"
Repository = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qqgjyx*"]
exclude = []

[tool.setuptools]
package-dir = {"" = "src"}

